--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Site</title>
+    <title>Holman Gao</title>
     <link type="text/css" href="./assets/main.css" rel="stylesheet" />
     <link type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" />
     <link href="http://www.gravatar.com/avatar/f14bfcfb11c5a367dc8c88bc3dd43189?s=16" rel="icon" />
