For now just redirecting to github page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,7 +35,10 @@
           Occasional forays into backend and production infrastructure projects
         </div>
         <div class="resume-entry-note">
-          <a href="http://www.golmansax.com/office-street-view/#office">Fun teams page</a>
+          {{! <a href="http://www.golmansax.com/office-street-view/#office"> }}
+          <a href="https://github.com/golmansax/office-street-view">
+            Fun teams page
+          </a>
           created in an internal hackathon
         </div>
       </div>
