--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
     <link type="text/css" href="./assets/main.css" rel="stylesheet" />
     <link type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" />
     <link href="http://www.gravatar.com/avatar/f14bfcfb11c5a367dc8c88bc3dd43189?s=16" rel="icon" />
-    <meta name="description" content="Personal site of Holman Gao, software engineer at Chalk Schools, University of Maryland and Blair Magnet alum, living in San Francisco" />
+    <meta name="description" content="{{__ 'meta_description'}}" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
   </head>
   <body>
