--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Holman Gao</title>
-    <link type="text/css" href="./assets/main.css" rel="stylesheet" />
+    <link type="text/css" href="/assets/main.css" rel="stylesheet" />
     <link type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" />
     <link href="http://www.gravatar.com/avatar/f14bfcfb11c5a367dc8c88bc3dd43189?s=16" rel="icon" />
     <meta name="description" content="{{__ 'metaDescription'}}" />
@@ -22,9 +22,10 @@
         </div>
       {{/each}}
     </div>
-    <div class="contact mt1">
+    <br />
+    <div class="contact">
       <a href="https://github.com/golmansax">Github</a> |
-      holman<span class="is_hidden">crap</span>@<span class="is_hidden">crap</span>golmansax<span class="is_hidden">crap</span>.com |
+      holman<span class="hide">crap</span>@<span class="hide">crap</span>golmansax<span class="hide">crap</span>.com |
       in San Francisco, CA
     </div>
   </body>
