--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,8 @@
-<h1>Holman Gao</h1>
-<div class="resume">
+<div class="container">
+  <h1>Holman Gao</h1>
+</div>
+<hr />
+<div class="resume container">
   {{#each (__ 'resume')}}
     <div class="resume-entry">
       {{> 'fragments' title}}
