Adding container around hcd

--- a/views/hcd.hbs
+++ b/views/hcd.hbs
@@ -1,4 +1,6 @@
-<h1>Human-Centered Design</h1>
-<br />
-<iframe class="pdf-viewer-landscape" src="http://mozilla.github.io/pdf.js/web/viewer.html?file=http%3A%2F%2Fasync5.org%2Fmoz%2Fpdfjs.pdf">
-</iframe>
+<div class="container">
+  <h1>Human-Centered Design</h1>
+  <br />
+  <iframe class="pdf-viewer-landscape" src="http://mozilla.github.io/pdf.js/web/viewer.html?file=http%3A%2F%2Fasync5.org%2Fmoz%2Fpdfjs.pdf">
+  </iframe>
+</div>
