Exposing hcd link

--- a/stylesheets/main.styl
+++ b/stylesheets/main.styl
@@ -38,6 +38,10 @@ $pdf-viewer-width = 720px
 .pdf-viewer-landscape {
   width $pdf-viewer-width
   height ($pdf-viewer-width * $pdf-landscape-height / $pdf-landscape-width)
+  border 1px #aaa solid
+  margin-left auto
+  margin-right auto
+  display block
 }
 
 .container {
