--- a/views/hcd.hbs
+++ b/views/hcd.hbs
@@ -1,6 +1,18 @@
 <div class="container">
   <h1>Human-Centered Design</h1>
+</div>
+<hr />
+<div class="container">
+  <p>
+    A few friends and I took a
+    <a href="http://plusacumen.org/courses/hcd-for-social-innovation/">
+      human-centered design course
+    </a>
+    on creating effective solutions for social change.
+    Our project brainstorm was on promoting healthy eating in the Tenderloin
+    neighborhood in San Francisco, CA.
+    Here is a presentation detailing what we did:
+  </p>
   <br />
-  <iframe class="pdf-viewer-landscape" src="http://mozilla.github.io/pdf.js/web/viewer.html?file=http%3A%2F%2Fasync5.org%2Fmoz%2Fpdfjs.pdf">
-  </iframe>
+  <iframe class="pdf-viewer-landscape" src="{{link}}"></iframe>
 </div>
