--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -19,5 +19,6 @@
       in San Francisco, CA
     </div>
     <br />
+    <script type="text/javascript" src="/assets/bundle.js"></script>
   </body>
 </html>
