Frontend is now fully connected!

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,3 +3,5 @@
 </div>
 <hr />
 <div id="react-container">{{{resume}}}</div>
+<script type="text/javascript">var gon = {{{gon}}};</script>
+<script type="text/javascript" src="/assets/bundle.js"></script>
