--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -4,6 +4,7 @@
     <title>Holman Gao</title>
     <link type="text/css" href="/assets/main.css" rel="stylesheet" />
     <link type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" />
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="http://www.gravatar.com/avatar/f14bfcfb11c5a367dc8c88bc3dd43189?s=16" rel="icon" />
     <meta name="description" content="{{__ 'metaDescription'}}" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
