--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,4 +4,4 @@
 <hr />
 <div id="react-container">{{{resume}}}</div>
 <script type="text/javascript">var gon = {{{gon}}};</script>
-<script type="text/javascript" src="/assets/bundle.js"></script>
+<script type="text/javascript" src="{{cachify '/assets/bundle.js'}}"></script>
