--- a/assets/main.styl
+++ b/assets/main.styl
@@ -14,6 +14,12 @@ h1 {
   font-size 24px
 }
 
+h2 {
+  font-size 20px
+  font-weight bold
+  text-transform uppercase
+}
+
 h3 {
   font-size 18px
 }
@@ -22,12 +28,16 @@ a i {
   text-decoration: underline;
 }
 
-.resume-entry {
+.resume-category {
   margin-top 1em
 
-  &:first-child {
+  .resume-entry:first-of-type {
     margin-top auto
   }
+}
+
+.resume-entry {
+  margin 1em 1em 0
 }
 
 $resume-entry-child {
