--- a/assets/main.styl
+++ b/assets/main.styl
@@ -10,6 +10,11 @@ body {
   line-height 1.5
 }
 
+h1,
+h2 {
+  margin-bottom: .5em
+}
+
 h1 {
   font-size 24px
 }
@@ -17,7 +22,6 @@ h1 {
 h2 {
   font-size 20px
   font-weight bold
-  text-transform uppercase
 }
 
 h3 {
