--- a/views/donations.hbs
+++ b/views/donations.hbs
@@ -4,8 +4,10 @@
 <hr />
 <div class="container">
   <p>
-    I made a pledge after graduating college to donate cash every year on my
-    birthday to an organization.
+    After obtaining my undergraduate degree, I made a pledge to donate cash
+    every year on my birthday, to support organizations that I feel are
+    making a positive impact in society. All of the organizations that I have
+    chosen so far are ones that have helped me become who I am today.
   </p>
   <div id="react-container">{{{donations}}}</div>
 </div>
