--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -3,7 +3,7 @@
   <head>
     <title>{{metaData.title}}</title>
     <link href="{{cachify '/assets/main.css'}}" rel="stylesheet" />
-    <link type="text/css" href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" />
+    <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="http://www.gravatar.com/avatar/f14bfcfb11c5a367dc8c88bc3dd43189?s=16" rel="icon" />
     {{#if metaData.description}}
