Adding some green

--- a/assets/main.styl
+++ b/assets/main.styl
@@ -38,6 +38,15 @@ p {
   margin-bottom .5em
 }
 
+$my-green = #25a27a
+a {
+  color $my-green
+
+  &:hover {
+    color darken($my-green, 30%)
+  }
+}
+
 .resume-category {
   margin-top 1em
 
