--- a/views/donations.hbs
+++ b/views/donations.hbs
@@ -1,7 +1,8 @@
-<div class="container">
-  <h1>Donations Pledge</h1>
+<div class="header">
+  <div class="container">
+    <h1>Donations Pledge</h1>
+  </div>
 </div>
-<hr />
 <div class="container">
   <p>
     After obtaining my undergraduate degree, I made a pledge to donate cash
