--- a/views/hcd.hbs
+++ b/views/hcd.hbs
@@ -1,7 +1,8 @@
-<div class="container">
-  <h1>Human-Centered Design</h1>
+<div class="header">
+  <div class="container">
+    <h1>Human-Centered Design</h1>
+  </div>
 </div>
-<hr />
 <div class="container">
   <p>
     A few friends and I took a
@@ -10,8 +11,8 @@
     </a>
     on creating effective solutions for social change.
     Our project brainstorm was on promoting healthy eating in the Tenderloin
-    neighborhood in San Francisco, CA.
-    Here is a presentation detailing what we did:
+    neighborhood in San Francisco, CA.  Below is a presentation detailing
+    our project:
   </p>
   <br />
   <iframe class="pdf-viewer-landscape" src="{{link}}"></iframe>
