--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,8 @@
-<div class="container">
-  <h1>Holman Gao</h1>
+<div class="header">
+  <div class="container">
+    <h1>Holman Gao</h1>
+  </div>
 </div>
-<hr />
 <div id="react-container">{{{resume}}}</div>
 <script type="text/javascript">var gon = {{{gon}}};</script>
 <script type="text/javascript" src="{{cachify '/assets/main.js'}}"></script>
