Use em instead of px for fonts

--- a/assets/main.styl
+++ b/assets/main.styl
@@ -10,24 +10,23 @@ $white = white
 
 body {
   font-family 'PT Sans', sans-serif
-  font-size 16px
   line-height 1.5
   color $dark-gray
 }
 
 h1 {
-  font-size 28px
+  font-size 2em
   font-weight bold
 }
 
 h2 {
-  font-size 20px
+  font-size 1.5em
   margin-bottom: .5em
   font-weight bold
 }
 
 h3 {
-  font-size 18px
+  font-size 1.25em
   margin-bottom .25em
 }
 
