--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -10,6 +10,7 @@
       <meta name="description" content="{{metaData.description}}" />
     {{/if}}
     <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   </head>
   <body>
     {{{body}}}
