Try coloring trick

--- a/assets/main.styl
+++ b/assets/main.styl
@@ -12,6 +12,11 @@ body {
   font-family 'PT Sans', sans-serif
   line-height 1.5
   color $dark-gray
+  background-color $my-green
+}
+
+.content {
+  background-color $white
 }
 
 h1 {
