--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -13,14 +13,16 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   </head>
   <body>
-    {{{body}}}
-    <br />
-    <hr />
-    <div class="container">
-      <a href="https://github.com/golmansax">Github</a> |
-      holman<span class="hide">crap</span>@<span class="hide">crap</span>golmansax<span class="hide">crap</span>.com |
-      in San Francisco, CA
+    <div class="content">
+      {{{body}}}
+      <br />
+      <hr />
+      <div class="container">
+        <a href="https://github.com/golmansax">Github</a> |
+        holman<span class="hide">crap</span>@<span class="hide">crap</span>golmansax<span class="hide">crap</span>.com |
+        in San Francisco, CA
+      </div>
+      <br />
     </div>
-    <br />
   </body>
 </html>
