--- a/assets/main.styl
+++ b/assets/main.styl
@@ -8,6 +8,11 @@ $my-green = #198565
 $dark-gray = #222
 $white = white
 
+html,
+body {
+  height: 100%
+}
+
 body {
   font-family 'PT Sans', sans-serif
   line-height 1.5
@@ -17,6 +22,7 @@ body {
 
 .content {
   background-color $white
+  min-height 100%
 }
 
 h1 {
