Add logo to header

--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -16,11 +16,9 @@
     <div class="content">
       <div class="header">
         <div class="container">
-          {{!
           <a href="/">
-            <img src="cachify '/saxophone-icon.png'" style="float:left;margin-right: 10px"/>
+            <img class="header-logo" src="{{cachify '/static/header-icon.png'}}" />
           </a>
-          }}
           <h1>{{metaData.title}}</h1>
         </div>
       </div>
