Apply lower line-height on headers

--- a/assets/main.styl
+++ b/assets/main.styl
@@ -25,6 +25,13 @@ body {
   min-height 100%
 }
 
+h1,
+h2,
+h3 {
+  line-height 1.2
+  padding .15em 0
+}
+
 h1 {
   font-size 2em
   font-weight bold
