--- a/assets/main.styl
+++ b/assets/main.styl
@@ -7,6 +7,7 @@ $container-width = 900px
 $my-green = #198565
 $dark-gray = #222
 $white = white
+$header-ratio = 1.25em
 
 html,
 body {
@@ -33,18 +34,18 @@ h3 {
 }
 
 h1 {
-  font-size 2em
+  font-size $header-ratio ** 3
   font-weight bold
 }
 
 h2 {
-  font-size 1.5em
+  font-size $header-ratio ** 2
   margin-bottom: .5em
   font-weight bold
 }
 
 h3 {
-  font-size 1.25em
+  font-size $header-ratio
   margin-bottom .25em
 }
 
