Make pdf viewer responsive

--- a/views/hcd.hbs
+++ b/views/hcd.hbs
@@ -10,5 +10,5 @@
     our project:
   </p>
   <br />
-  <iframe class="pdf-viewer-landscape" src="{{link}}"></iframe>
+  <div class="pdf-viewer"><iframe src="{{link}}"></iframe></div>
 </div>
