--- a/assets/main.styl
+++ b/assets/main.styl
@@ -109,17 +109,24 @@ a {
   display none
 }
 
-$pdf-landscape-width = em(960px)
-$pdf-landscape-height = em(720px)
 $pdf-viewer-width = em(720px)
 
-.pdf-viewer-landscape {
+.pdf-viewer {
+  position: relative
+  padding-bottom: 56.25% /* 16:9 */
+  padding-top: 25px
+  height: 0
   width $pdf-viewer-width
-  height ($pdf-viewer-width * $pdf-landscape-height / $pdf-landscape-width)
-  border em(1px) #aaa solid
-  margin-left auto
-  margin-right auto
-  display block
+  max-width 100%
+  margin 0 auto
+
+  iframe {
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+  }
 }
 
 .container {
