Redo a few spaces

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,7 +35,7 @@ html(lang='en')
       hr
       .container
         a(href='https://github.com/golmansax') Github
-        | &nbsp;| holman
+        |  | holman
         span.hide crap
         | @
         span.hide crap
