--- a/views/hcd.jade
+++ b/views/hcd.jade
@@ -6,10 +6,10 @@ block content
       | A few friends and I took a&nbsp;
       a(href='http://plusacumen.org/courses/hcd-for-social-innovation/')
         human-centered design course
-      &nbsp;on creating effective solutions for social change.
-      Our project brainstorm was on promoting healthy eating in the Tenderloin
-      neighborhood in San Francisco, CA.  Below is a presentation detailing
-      our project:
+      |  on creating effective solutions for social change.  Our project
+      | brainstorm was on promoting healthy eating in the Tenderloin
+      | neighborhood in San Francisco, CA.  Below is a presentation detailing
+      | our project:
     br
     .pdf-viewer
       iframe(src=link)
