Add a resume link

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,6 +35,9 @@ html(lang='en')
       hr
       .container
         a(href='https://github.com/golmansax') Github
+        //
+          |  |&nbsp;
+          a(href='/resume') Resume
         |  | holman
         span.hide crap
         | @
