--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,48 +1,8 @@
 doctype html
 html(lang='en')
-  head
-    title= metaData.title === 'Holman Gao' ? metaData.title : metaData.title + ' — Holman Gao '
-    link(href=cachify('/assets/main.css'), rel='stylesheet')
-    link(
-      type='text/css',
-      rel='stylesheet',
-      href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic'
-    )
-    link(
-      href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css',
-      rel='stylesheet'
-    )
-    link(
-      href='http://www.gravatar.com/avatar/f14bfcfb11c5a367dc8c88bc3dd43189?s=16',
-      rel='icon'
-    )
-
-    if metaData.description
-      meta(name='description', content=metaData.description)
-
-    meta(name='viewport', content='width=device-width, user-scalable=no')
-    meta(name='apple-mobile-web-app-status-bar-style', content='black-translucent')
-
+  include ./layout/head.jade
   body
     .content
-      .header
-        .container
-          a(href='/')
-            img.header-logo(src=cachify('/static/header-icon.png'))
-          h1= metaData.title === 'Holman Gao' ? metaData.title : 'Holman Gao / ' + metaData.title
+      include ./layout/navbar.jade
       block content
-      br
-      hr
-      .container
-        a(href='https://github.com/golmansax') Github
-        //
-          |  |&nbsp;
-          a(href='/resume') Resume
-        |  | holman
-        span.hide crap
-        | @
-        span.hide crap
-        | golmansax
-        span.hide crap
-        | .com | in San Francisco, CA
-      br
+      include ./layout/footer.jade
