Rename header to navbar and start building out style with views

--- a/views/layout/navbar.jade
+++ b/views/layout/navbar.jade
@@ -1,5 +1,5 @@
-.header
+.navbar
   .container
     a(href='/')
-      img.header-logo(src=cachify('/static/header-icon.png'))
+      img.navbar-logo(src=cachify('/static/navbar-icon.png'))
     h1= metaData.title === 'Holman Gao' ? metaData.title : 'Holman Gao / ' + metaData.title
