--- a/views/main.styl
+++ b/views/main.styl
@@ -72,21 +72,6 @@ a {
   }
 }
 
-.header {
-  background $my-green
-  padding 1em 0
-  margin-bottom 1em
-
-  h1 {
-    color $white
-  }
-}
-
-.header-logo {
-  float left
-  margin-right .75em
-}
-
 .resume-category {
   margin-top 1em
 
@@ -179,3 +164,5 @@ $pdf-viewer-width = em(720px)
 .clearfix {
   clearfix()
 }
+
+@require './layout/navbar'
