Move everything into pages

--- a/views/pages/resume.jade
+++ b/views/pages/resume.jade
@@ -1,7 +1,7 @@
-extends ./layout.jade
+extends ../layout
 
 block content
-  #react-container!= work
+  #react-container!= resume
 
   script(type='text/javascript').
     var gon = !{gon};
