--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,8 @@
 doctype html
 html(lang='en')
-  include ./layout/head.jade
+  include ./layout/head
   body
     .content
-      include ./layout/navbar.jade
+      include ./layout/navbar
       block content
-      include ./layout/footer.jade
+      include ./layout/footer
