--- a/views/pages/work.jade
+++ b/views/pages/work.jade
@@ -1,7 +1,7 @@
-extends ./layout.jade
+extends ../layout
 
 block content
-  #react-container!= resume
+  #react-container!= work
 
   script(type='text/javascript').
     var gon = !{gon};
