Started on work projects page

--- a/client/work_projects/page.jade
+++ b/client/work_projects/page.jade
@@ -5,4 +5,4 @@ block content
 
   script(type='text/javascript').
     var gon = !{gon};
-  script(type='text/javascript', src=cachify('/assets/main.js'))
+  //script(type='text/javascript', src=cachify('/assets/main.js'))
