Break out resume styl

--- a/client/main.styl
+++ b/client/main.styl
@@ -72,47 +72,6 @@ a {
   }
 }
 
-.resume-category {
-  margin-top 1em
-
-  .resume-entry:first-of-type {
-    margin-top auto
-  }
-}
-
-.resume-entry {
-  margin 2em 0 0
-
-  .fa-li {
-    font-size .5em
-    left -3em
-    top 1em
-  }
-}
-
-.resume-entry-image-container {
-  padding-top .5em
-}
-
-.resume-entry-image {
-  col(1/3)
-
-  img {
-    width 100%
-  }
-}
-
-.resume-entry-other {
-  col(2/3)
-}
-
-+below('m') {
-  .resume-entry-image,
-  .resume-entry-other {
-    stack()
-  }
-}
-
 .hide {
   display none
 }
@@ -166,3 +125,4 @@ $pdf-viewer-width = em(720px)
 }
 
 @require './layout/navbar'
+@require './resume/resume'
