Progress on work page

--- a/client/work_projects/page.jade
+++ b/client/work_projects/page.jade
@@ -1,7 +1,7 @@
 extends ../layout
 
 block content
-  #react-container!= work
+  #react-container!= workProjects
 
   script(type='text/javascript').
     var gon = !{gon};
