--- a/client/projects/list.styl
+++ b/client/projects/list.styl
@@ -8,14 +8,6 @@
   &:last-child {
     border-width 0
   }
-
-  dt {
-    font-weight bold
-  }
-
-  dd {
-    margin -.25em 0 .25em
-  }
 }
 
 .projects-list-item-left {
@@ -28,4 +20,19 @@
 
 .projects-list-item-right {
   col(1/2)
+
+  line-height 1.4
+
+  dt {
+    font-weight bold
+  }
+
+  dd {
+    margin-bottom 1em
+  }
+
+  ul {
+    list-style disc
+    padding-left 1.25em
+  }
 }
