Cool, split out the images part

--- a/client/main.styl
+++ b/client/main.styl
@@ -140,4 +140,5 @@ $pdf-viewer-width = em(720px)
 
 @require './layout/navbar'
 @require './resume/resume'
+@require './projects/images'
 @require './projects/list_item'
