Work on community page

--- a/client/projects/list_item.styl
+++ b/client/projects/list_item.styl
@@ -12,26 +12,11 @@
     margin-bottom 1em
   }
 
-  +e(image-container) {
+  +e(visual-container) {
     col(1/2)
   }
 
   +e(content) {
     col(1/2)
-
-    line-height 1.4
-
-    dt {
-      font-weight bold
-    }
-
-    dd {
-      margin-bottom 1em
-    }
-
-    ul {
-      list-style disc
-      padding-left 1.25em
-    }
   }
 }
