--- a/client/main.styl
+++ b/client/main.styl
@@ -140,5 +140,6 @@ $pdf-viewer-width = em(720px)
 
 @require './layout/navbar'
 @require './resume/resume'
+@require './projects/content'
 @require './projects/images'
 @require './projects/list_item'
