Add footer styling

--- a/client/layout/footer.jade
+++ b/client/layout/footer.jade
@@ -1,15 +1,13 @@
-br
-hr
-.container
-  a(href='https://github.com/golmansax') Github
-  //
-    |  |&nbsp;
-    a(href='/resume') Resume
-  |  | holman
-  span.hide crap
-  | @
-  span.hide crap
-  | golmansax
-  span.hide crap
-  | .com | in San Francisco, CA
-br
+.footer
+  .container
+    a(href='https://github.com/golmansax') Github
+    //
+      |  |&nbsp;
+      a(href='/resume') Resume
+    |  | holman
+    span.hide crap
+    | @
+    span.hide crap
+    | golmansax
+    span.hide crap
+    | .com | in San Francisco, CA
