--- a/client/main.styl
+++ b/client/main.styl
@@ -138,6 +138,7 @@ $pdf-viewer-width = em(720px)
   clearfix()
 }
 
+@require './layout/footer'
 @require './layout/navbar'
 @require './resume/resume'
 @require './projects/content'
