Touching up portfolio and work site

--- a/client/main.styl
+++ b/client/main.styl
@@ -142,6 +142,6 @@ $pdf-viewer-width = em(720px)
 @require './layout/navbar'
 @require './resume/resume'
 @require './projects/content'
-@require './projects/grid_item'
+@require './projects/grid'
 @require './projects/images'
 @require './projects/list_item'
