More pictures showing!

--- a/client/main.styl
+++ b/client/main.styl
@@ -143,5 +143,5 @@ $pdf-viewer-width = em(720px)
 @require './resume/resume'
 @require './projects/content'
 @require './projects/grid'
-@require './projects/images'
+@require './projects/image'
 @require './projects/list_item'
