Content is put into place

--- a/client/main.styl
+++ b/client/main.styl
@@ -140,6 +140,7 @@ $pdf-viewer-width = em(720px)
 
 @require './layout/footer'
 @require './layout/navbar'
+@require './resume/notes'
 @require './resume/resume'
 @require './projects/content'
 @require './projects/grid'
