--- a/client/projects/list_item.styl
+++ b/client/projects/list_item.styl
@@ -14,9 +14,18 @@
 
   +e(visual-container) {
     col(1/2)
+
+    +below('m') {
+      stack()
+    }
   }
 
   +e(content) {
     col(1/2)
+
+    +below('m') {
+      stack()
+      margin-top 1em
+    }
   }
 }
