--- a/client/projects/grid.styl
+++ b/client/projects/grid.styl
@@ -10,6 +10,10 @@
     +below('m') {
       stack()
       padding: 1em 0;
+
+      &:first-child {
+        padding-top: 2em;
+      }
     }
   }
 
@@ -18,6 +22,10 @@
 
     +above('m') {
       padding: 1em 0;
+
+      &:first-child {
+        padding-top: 2em;
+      }
     }
   }
 }
