Adding breadcrumbs so i don't need title

--- a/client/layout/navbar.jade
+++ b/client/layout/navbar.jade
@@ -3,7 +3,7 @@
     .navbar-left
       a.navbar-logo(href='/')
         img(src=cachify('/static/navbar-icon.png'))
-      h1= metaData.title
+      h1 Holman Gao
     .navbar-right
       a(href='/work') Work
       a(href='/side-projects') Side Projects
