--- a/client/main.styl
+++ b/client/main.styl
@@ -138,6 +138,7 @@ $pdf-viewer-width = em(720px)
   clearfix()
 }
 
+@require './breadcrumbs/list'
 @require './layout/footer'
 @require './layout/navbar'
 @require './resume/notes'
