--- a/client/projects/list_item.styl
+++ b/client/projects/list_item.styl
@@ -3,6 +3,10 @@
     border-bottom $colored-border
     padding 2em 0
 
+    &:first-child {
+      padding-top 1em
+    }
+
     &:last-child {
       border-width 0
     }
