--- a/client/layout.jade
+++ b/client/layout.jade
@@ -6,3 +6,4 @@ html(lang='en')
       include ./layout/navbar
       block content
       include ./layout/footer
+    script(type='text/javascript', src=cachify('/assets/main.js'))
