--- a/client/main.styl
+++ b/client/main.styl
@@ -145,8 +145,8 @@ $pdf-viewer-width = em(720px)
 
 @require './breadcrumbs/list'
 @require './content/sidebar'
-@require './layout/footer'
-@require './layout/navbar'
+@require './content/footer'
+@require './content/navbar'
 @require './resume/notes'
 @require './resume/resume'
 @require './projects/content'
