Style hack for iPhone?

--- a/client/main.styl
+++ b/client/main.styl
@@ -41,6 +41,11 @@ body {
 .content {
   background-color $white
   min-height 100%
+
+  & > div > div {
+    overflow-y scroll !important
+    -webkit-overflow-scrolling touch !important
+  }
 }
 
 h1,
