Complete my own menu!

--- a/client/main.styl
+++ b/client/main.styl
@@ -145,6 +145,7 @@ $pdf-viewer-width = em(720px)
 
 @require './breadcrumbs/list'
 @require './content/footer'
+@require './content/handler'
 @require './content/navbar'
 @require './resume/notes'
 @require './resume/resume'
