Modify lots of content!

--- a/client/main.styl
+++ b/client/main.styl
@@ -147,6 +147,7 @@ $pdf-viewer-width = em(720px)
 @require './content/footer'
 @require './content/handler'
 @require './content/navbar'
+@require './fragments/bullet_list'
 @require './resume/notes'
 @require './resume/resume'
 @require './projects/content'
