Make github link look nicer

--- a/client/main.styl
+++ b/client/main.styl
@@ -148,6 +148,7 @@ $pdf-viewer-width = em(720px)
 @require './content/handler'
 @require './content/navbar'
 @require './fragments/bullet_list'
+@require './fragments/github_fragment'
 @require './resume/notes'
 @require './resume/resume'
 @require './projects/content'
