--- a/client/content/footer.styl
+++ b/client/content/footer.styl
@@ -2,4 +2,22 @@
   margin-top 2em
   border-top $colored-border
   padding .5em 0 1em
+
+  .fa-stack {
+    margin-right .2em
+  }
+
+  +e(section) {
+    margin-bottom .25em
+
+    +desktop() {
+      display inline-block
+      margin-right 2em
+    }
+
+    +between('m', 'l') {
+      col(1/2)
+      margin-right 0
+    }
+  }
 }
