--- a/client/content/footer.styl
+++ b/client/content/footer.styl
@@ -20,4 +20,16 @@
       margin-right 0
     }
   }
+
+  +e(resume-icon) {
+    .fa-file-text {
+      margin: em(-1px) 0 0 em(.5px)
+    }
+  }
+
+  +e(email-icon) {
+    .fa-envelope {
+      margin-top: em(-1px)
+    }
+  }
 }
