Move footer to its own folder

--- a/client/main.styl
+++ b/client/main.styl
@@ -144,7 +144,8 @@ $pdf-viewer-width = em(720px)
 }
 
 @require './breadcrumbs/list'
-@require './content/footer'
+@require './content/footer/footer'
+@require './content/footer/section'
 @require './content/handler'
 @require './content/navbar'
 @require './fragments/bullet_list'
