Pull out email into its own component

--- a/client/main.styl
+++ b/client/main.styl
@@ -86,10 +86,6 @@ a {
   }
 }
 
-.hide {
-  display none
-}
-
 $pdf-viewer-width = em(720px)
 
 .pdf-viewer {
@@ -150,6 +146,7 @@ $pdf-viewer-width = em(720px)
 @require './content/navbar'
 @require './fragments/bullet_list'
 @require './fragments/github_fragment'
+@require './my/email'
 @require './resume/notes'
 @require './resume/resume'
 @require './projects/content'
