--- a/client/main.styl
+++ b/client/main.styl
@@ -86,26 +86,6 @@ a {
   }
 }
 
-$pdf-viewer-width = em(720px)
-
-.pdf-viewer {
-  position: relative
-  padding-bottom: 56.25% /* 16:9 */
-  padding-top: 25px
-  height: 0
-  width $pdf-viewer-width
-  max-width 100%
-  margin 0 auto
-
-  iframe {
-    position: absolute
-    top: 0
-    left: 0
-    width: 100%
-    height: 100%
-  }
-}
-
 .container {
   center($container-width, 1em)
 
@@ -153,3 +133,4 @@ $pdf-viewer-width = em(720px)
 @require './projects/grid'
 @require './projects/image'
 @require './projects/list_item'
+@require './shared/pdf'
