--- a/client/content/handler.styl
+++ b/client/content/handler.styl
@@ -7,17 +7,17 @@
   }
 
   +e(body) {
-    z-index 0
-    position relative
     overflow hidden
+    position relative
+    z-index 0
   }
 
   +e(backdrop) {
-    position absolute
+    background rgba($dark-gray, .5)
+    height 1000em
     left 0
+    position absolute
     top 0
     width 1000em
-    height 1000em
-    background rgba($dark-gray, 0.5)
   }
 }
