--- a/client/content/navbar.styl
+++ b/client/content/navbar.styl
@@ -8,9 +8,9 @@
   }
 
   +e(menu) {
-    position: absolute;
-    top: em(70px)
-    right: 0;
+    position absolute
+    top em(70px)
+    right 0
     background $white
     border-left $colored-border
 
@@ -30,7 +30,7 @@
 
   +e(sidebar-trigger) {
     background inherit
-    border none
+    border 0
     color $white
     float right
     margin -.75em -1em -.5em .5em
