--- a/client/projects/grid.styl
+++ b/client/projects/grid.styl
@@ -3,16 +3,16 @@
     col(1/3)
 
     h2 {
-      text-align: center;
-      margin-bottom: .25em;
+      text-align center
+      margin-bottom .25em
     }
 
     +below('m') {
       stack()
-      padding: 1em 0;
+      padding 1em 0
 
       &:first-child {
-        padding-top: 2em;
+        padding-top 2em
       }
     }
   }
@@ -21,10 +21,10 @@
     clearfix()
 
     +above('m') {
-      padding: 1em 0;
+      padding 1em 0
 
       &:first-child {
-        padding-top: 2em;
+        padding-top 2em
       }
     }
   }
