--- a/client/shared/pdf.styl
+++ b/client/shared/pdf.styl
@@ -1,20 +1,20 @@
 $pdf-width = em(720px)
 
 .gsax-pdf {
-  position: relative
-  padding-bottom: 56.25% /* 16:9 */
-  padding-top: 25px
-  height: 0
-  width $pdf-viewer-width
-  max-width 100%
+  height 0
   margin 0 auto
+  max-width 100%
+  padding-bottom 56.25% /* 16:9 */
+  padding-top 25px
+  position relative
+  width $pdf-viewer-width
 
   iframe {
-    position: absolute
-    top: 0
-    left: 0
-    width: 100%
-    height: 100%
+    height 100%
+    left 0
+    position absolute
+    top 0
+    width 100%
   }
 }
 
