--- a/client/main.styl
+++ b/client/main.styl
@@ -1,8 +1,7 @@
-@import 'nib'
-@import 'jeet'
+@require 'nib'
+@require 'jeet'
 
 global-reset()
-
 
 e(name) {
   &__{name} {
@@ -114,7 +113,7 @@ a {
 
 @require './breadcrumbs/list'
 @require './content/footer/footer'
-@require './content/footer/section'
+@require './content/footer/info_tags'
 @require './content/handler'
 @require './content/navbar'
 @require './fragments/bullet_list'
