--- a/client/content/footer/info_tags.styl
+++ b/client/content/footer/info_tags.styl
@@ -15,13 +15,13 @@
 
   +e(resume-icon) {
     .fa-file-text {
-      margin: em(-1px) 0 0 em(.5px)
+      margin: px-to-em(-1px) 0 0 px-to-em(.5px)
     }
   }
 
   +e(email-icon) {
     .fa-envelope {
-      margin-top: em(-1px)
+      margin-top: px-to-em(-1px)
     }
   }
 }
