--- a/client/main.styl
+++ b/client/main.styl
@@ -15,6 +15,14 @@ m(name) {
   }
 }
 
+px-to-em($value) {
+  $my-unit = unit($value);
+
+  if ($my-unit is 'px') {
+    return unit($value/16, 'em');
+  }
+}
+
 // Colors
 $my-green = #198565
 $darker-gray = #222
@@ -24,8 +32,10 @@ $white = white
 $header-ratio = 1.25em
 
 // Borders
-$colored-border = em(1px) $my-green solid
-$muted-border = em(1px) $light-gray solid
+$colored-border = px-to-em(1px) $my-green solid
+$muted-border = px-to-em(1px) $light-gray solid
+
+$lambda = 1.5
 
 html,
 body {
@@ -34,7 +44,8 @@ body {
 
 body {
   font-family 'PT Sans', sans-serif
-  line-height 1.5
+  font-size 100%
+  line-height $lambda
   color $dark-gray
   background-color $my-green
 }
@@ -48,22 +59,26 @@ h1,
 h2,
 h3 {
   line-height 1.2
-  padding .15em 0
   color $darker-gray
 }
 
 h1 {
+  $h1-size = $header-ratio ** 3
+
   font-size $header-ratio ** 3
   font-weight bold
+  line-height (($lambda * 3) / $h1-size)
 }
 
 h2 {
   font-size $header-ratio ** 2
   font-weight bold
+  padding .15em 0
 }
 
 h3 {
   font-size $header-ratio
+  padding .15em 0
 }
 
 hr {
