More updates to style

--- a/client/content/footer/footer.styl
+++ b/client/content/footer/footer.styl
@@ -2,7 +2,7 @@
 @require 'font-awesome-stylus/stylus/variables'
 
 .content-footer {
-  margin-top 2em
+  margin-top unit($lambda, em)
   border-top $colored-border
   padding 1em 0
 
