--- a/client/content/navbar.styl
+++ b/client/content/navbar.styl
@@ -35,8 +35,9 @@ $navbar-lambda = 3 * $lambda
     border 0
     color $white
     float right
-    margin -.75em -1em -.5em .5em
-    padding 1em
+    height unit($navbar-lambda, em)
+    margin-right -.6em // fudge factor to get image to line up with container
+    padding 0 unit($lambda / 2, em)
 
     +above('l') {
       display none
@@ -62,6 +63,7 @@ $navbar-lambda = 3 * $lambda
 
     height $img-width
     margin unit(($navbar-lambda - $img-lambda) / 2, em)
+    margin-left -.7em // fudge factor to get image to line up with container
     width $img-width
   }
 }
@@ -72,7 +74,7 @@ $navbar-lambda = 3 * $lambda
 
   a {
     color $white
-    padding 0 1em
+    margin 0 unit($lambda, em)
     text-transform uppercase
     text-decoration none
 
@@ -82,6 +84,10 @@ $navbar-lambda = 3 * $lambda
 
     &.active {
       text-decoration underline
+    }
+
+    &:last-child {
+      margin-right 0
     }
   }
 
