--- a/client/shared/container.styl
+++ b/client/shared/container.styl
@@ -1,10 +1,5 @@
-$container-width = px-to-em(900px)
+$container-width = unit(40 * $lambda, em)
 
 .gsax-container {
-  center($container-width, 1em)
-
-  +tablet() {
-    padding-left 2em
-    padding-right 2em
-  }
+  center($container-width, unit($lambda, em))
 }
